{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 746,
  "lineage": "660b2753-e090-dc45-13c2-c3cb86b5bc14",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Lohan_nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089e7e827996055c0",
            "association_id": "eipassoc-093602f80a8ea31a1",
            "domain": "vpc",
            "id": "eipalloc-089e7e827996055c0",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ed8fd1c9a89d9d7c",
            "private_dns": "ip-10-0-1-129.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-3-39-125-69.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.125.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Lohan_WEB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cc348a89b148946",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:instance/i-067790f38f3e994ca",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Lohan-ssm-ec2",
            "id": "i-067790f38f3e994ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Lohan-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08f6f7d192f382804",
            "private_dns": "ip-10-0-3-33.ap-northeast-2.compute.internal",
            "private_ip": "10.0.3.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04f2325cc75460b1b",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dafd8e13536bfe3e",
            "tags": {
              "Name": "Lohan_WEB_1",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_WEB_1",
              "user": "s2s_Lohan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1744e752c99fbd7"
            ]
          },
          "dependencies": [
            "aws_security_group.Lohan_web_sg",
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_private_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Lohan_WEB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09cc348a89b148946",
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:instance/i-0f483a0ca57945dd1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "Lohan-ssm-ec2",
            "id": "i-0f483a0ca57945dd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Lohan-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-078ba2b52e32324bd",
            "private_dns": "ip-10-0-4-42.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de3b1fba3af02564",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd7abdd030691f38",
            "tags": {
              "Name": "Lohan_WEB_2",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_WEB_2",
              "user": "s2s_Lohan"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c1744e752c99fbd7"
            ]
          },
          "dependencies": [
            "aws_security_group.Lohan_web_sg",
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Lohan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:internet-gateway/igw-0b8907cb4d706ba46",
            "id": "igw-0b8907cb4d706ba46",
            "owner_id": "151564769076",
            "tags": {
              "Name": "Lohan_igw",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_igw",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lohan_ecs_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-ecs-lb/05f4e535b561813b",
            "arn_suffix": "app/lohan-ecs-lb/05f4e535b561813b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-lohan-ecs-lb-1133499514.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-ecs-lb/05f4e535b561813b",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lohan-ecs-lb",
            "security_groups": [
              "sg-004c9984568913597"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bd7abdd030691f38"
              },
              {
                "subnet_id": "subnet-0dafd8e13536bfe3e"
              }
            ],
            "subnets": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_id": "vpc-07c5b287bd53175b7",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.Lohan_ecs_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lohan_web_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-web-lb/f54f93eb10044386",
            "arn_suffix": "app/lohan-web-lb/f54f93eb10044386",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lohan-web-lb-244288192.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-web-lb/f54f93eb10044386",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lohan-web-lb",
            "security_groups": [
              "sg-023106cd2b9e9e219"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a9d3f7f105763cc"
              },
              {
                "subnet_id": "subnet-0aba585b514d5366c"
              }
            ],
            "subnets": [
              "subnet-06a9d3f7f105763cc",
              "subnet-0aba585b514d5366c"
            ],
            "vpc_id": "vpc-07c5b287bd53175b7",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_public_1",
            "aws_subnet.Lohan_public_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/lohan-ecs-lb/05f4e535b561813b/59e511e53608fab7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-ecs-lb/6c8332c839c42bc7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/lohan-ecs-lb/05f4e535b561813b/59e511e53608fab7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-ecs-lb/05f4e535b561813b",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lohan_ecs_loadbalancer",
            "aws_lb_target_group.lohan_lb_target_group",
            "aws_security_group.Lohan_ecs_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/lohan-web-lb/f54f93eb10044386/6bd829251d6185a8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:listener/app/lohan-web-lb/f54f93eb10044386/6bd829251d6185a8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:loadbalancer/app/lohan-web-lb/f54f93eb10044386",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lohan_web_loadbalancer",
            "aws_lb_target_group.lohan_web_target_group",
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_public_1",
            "aws_subnet.Lohan_public_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lohan_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-ecs-lb/6c8332c839c42bc7",
            "arn_suffix": "targetgroup/lohan-target-ecs-lb/6c8332c839c42bc7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-ecs-lb/6c8332c839c42bc7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lohan-target-ecs-lb",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lohan_web_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
            "arn_suffix": "targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lohan-target-web-lb",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf-20220512021712850600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
            "target_id": "i-067790f38f3e994ca"
          },
          "dependencies": [
            "aws_instance.Lohan_WEB_1",
            "aws_lb_target_group.lohan_web_target_group",
            "aws_security_group.Lohan_web_sg",
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_private_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf-20220512021712742000000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:151564769076:targetgroup/lohan-target-web-lb/2ff5b76d05fedcdf",
            "target_id": "i-0f483a0ca57945dd1"
          },
          "dependencies": [
            "aws_instance.Lohan_WEB_2",
            "aws_lb_target_group.lohan_web_target_group",
            "aws_security_group.Lohan_web_sg",
            "aws_security_group.Lohan_weblb_sg",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Lohan_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089e7e827996055c0",
            "connectivity_type": "public",
            "id": "nat-0b2c0b2657ae71b9f",
            "network_interface_id": "eni-0ed8fd1c9a89d9d7c",
            "private_ip": "10.0.1.129",
            "public_ip": "3.39.125.69",
            "subnet_id": "subnet-0aba585b514d5366c",
            "tags": {
              "Name": "Lohan_NAT"
            },
            "tags_all": {
              "Name": "Lohan_NAT"
            }
          },
          "dependencies": [
            "aws_eip.Lohan_nat_ip",
            "aws_internet_gateway.Lohan_igw",
            "aws_subnet.Lohan_public_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02cc8dd1629f4ad041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2c0b2657ae71b9f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cc8dd1629f4ad04",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Lohan_nat_ip",
            "aws_internet_gateway.Lohan_igw",
            "aws_nat_gateway.Lohan_nat",
            "aws_route_table.route_table_private_1",
            "aws_subnet.Lohan_public_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01b07c5d859e6a9091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2c0b2657ae71b9f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01b07c5d859e6a909",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Lohan_nat_ip",
            "aws_internet_gateway.Lohan_igw",
            "aws_nat_gateway.Lohan_nat",
            "aws_route_table.route_table_private_2",
            "aws_subnet.Lohan_public_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Lohan_public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-02eb542e6f9fa0e6c",
            "id": "rtb-02eb542e6f9fa0e6c",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8907cb4d706ba46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lohan_public_rt_1",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_public_rt_1",
              "user": "s2s_Lohan"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Lohan_igw",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Lohan_public_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-078c1117a6de3b40a",
            "id": "rtb-078c1117a6de3b40a",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8907cb4d706ba46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lohan_public_rt_2",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_public_rt_2",
              "user": "s2s_Lohan"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Lohan_igw",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-02cc8dd1629f4ad04",
            "id": "rtb-02cc8dd1629f4ad04",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2c0b2657ae71b9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lohan-private-rt1"
            },
            "tags_all": {
              "Name": "Lohan-private-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:route-table/rtb-01b07c5d859e6a909",
            "id": "rtb-01b07c5d859e6a909",
            "owner_id": "151564769076",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2c0b2657ae71b9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Lohan-private-rt2"
            },
            "tags_all": {
              "Name": "Lohan-private-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c091ef525ab5e41c",
            "route_table_id": "rtb-02eb542e6f9fa0e6c",
            "subnet_id": "subnet-0aba585b514d5366c"
          },
          "dependencies": [
            "aws_internet_gateway.Lohan_igw",
            "aws_route_table.Lohan_public_rt_1",
            "aws_subnet.Lohan_public_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efe771f67dd70c97",
            "route_table_id": "rtb-02eb542e6f9fa0e6c",
            "subnet_id": "subnet-06a9d3f7f105763cc"
          },
          "dependencies": [
            "aws_internet_gateway.Lohan_igw",
            "aws_route_table.Lohan_public_rt_1",
            "aws_subnet.Lohan_public_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090af7bea8c700f25",
            "route_table_id": "rtb-02cc8dd1629f4ad04",
            "subnet_id": "subnet-0dafd8e13536bfe3e"
          },
          "dependencies": [
            "aws_route_table.route_table_private_1",
            "aws_subnet.Lohan_private_1",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209f8bc18a125227",
            "route_table_id": "rtb-01b07c5d859e6a909",
            "subnet_id": "subnet-0bd7abdd030691f38"
          },
          "dependencies": [
            "aws_route_table.route_table_private_2",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_ecr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0003e87d0df9cc27d",
            "description": "Lohan_ECR Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0003e87d0df9cc27d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Lohan_ecr_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-004c9984568913597",
            "description": "Lohan_ECS_SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004c9984568913597",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Lohan_ecs_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0e50309247bb14589",
            "description": "Lohan_RDS_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e50309247bb14589",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Lohan_rds_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-06a96a2171c0ba30f",
            "description": "Allow SSH port from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a96a2171c0ba30f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "27.122.140.10/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Lohan_test_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_ssm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0654b11aaf6083961",
            "description": "Lohan_SSM Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0654b11aaf6083961",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Lohan_ssm_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-0c1744e752c99fbd7",
            "description": "Lohan_WEB_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1744e752c99fbd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023106cd2b9e9e219"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-023106cd2b9e9e219"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Lohan_web_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Lohan_weblb_sg",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lohan_weblb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:security-group/sg-023106cd2b9e9e219",
            "description": "Lohan_WEBlb_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023106cd2b9e9e219",
            "ingress": [
              {
                "cidr_blocks": [
                  "27.122.140.10/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Lohan_weblb_sg",
            "name_prefix": "",
            "owner_id": "151564769076",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0dafd8e13536bfe3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dafd8e13536bfe3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_private_1",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_private_1",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0bd7abdd030691f38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd7abdd030691f38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_private_2",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_private_2",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_private_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0f8efa894edee6c6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8efa894edee6c6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_private_DB_1",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_private_DB_1",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_private_DB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-075ce2fb0eff28aa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075ce2fb0eff28aa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_private_DB_2",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_private_DB_2",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-0aba585b514d5366c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aba585b514d5366c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_public_1",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_public_1",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Lohan_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:subnet/subnet-06a9d3f7f105763cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a9d3f7f105763cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151564769076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Lohan_public_2",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_public_2",
              "user": "s2s_Lohan"
            },
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Lohan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc/vpc-07c5b287bd53175b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074aa8eaa1efe42d7",
            "default_route_table_id": "rtb-0d447d4d355eedd8e",
            "default_security_group_id": "sg-035239dd7bca09238",
            "dhcp_options_id": "dopt-c9ec46a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07c5b287bd53175b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d447d4d355eedd8e",
            "owner_id": "151564769076",
            "tags": {
              "Name": "Lohan_vpc",
              "user": "s2s_Lohan"
            },
            "tags_all": {
              "Name": "Lohan_vpc",
              "user": "s2s_Lohan"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Lohan_ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-0c2bfa0fbd833c52c",
            "dns_entry": [
              {
                "dns_name": "vpce-0c2bfa0fbd833c52c-2uzajfu6.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c2bfa0fbd833c52c-2uzajfu6-ap-northeast-2a.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0c2bfa0fbd833c52c-2uzajfu6-ap-northeast-2c.ec2messages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ec2messages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09061303V4V6PEDBND1A"
              }
            ],
            "id": "vpce-0c2bfa0fbd833c52c",
            "network_interface_ids": [
              "eni-007a65898b538597e",
              "eni-0bdc06a374da8dac1"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0654b11aaf6083961"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_security_group.Lohan_ssm_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Lohan_ecrapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-00dde44c1e274c6be",
            "dns_entry": [
              {
                "dns_name": "vpce-00dde44c1e274c6be-dm4ln7ps.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00dde44c1e274c6be-dm4ln7ps-ap-northeast-2c.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-00dde44c1e274c6be-dm4ln7ps-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z08798523LR9FHKU8XUUS"
              }
            ],
            "id": "vpce-00dde44c1e274c6be",
            "network_interface_ids": [
              "eni-00fda356dead6dab8",
              "eni-0da0b9ccba051757e"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0003e87d0df9cc27d"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_security_group.Lohan_ecr_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Lohan_ecrdkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-0e7d284cb343a3613",
            "dns_entry": [
              {
                "dns_name": "vpce-0e7d284cb343a3613-dsaq2o0u.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e7d284cb343a3613-dsaq2o0u-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0e7d284cb343a3613-dsaq2o0u-ap-northeast-2c.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0907992JO5AJATL968N"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z0907992JO5AJATL968N"
              }
            ],
            "id": "vpce-0e7d284cb343a3613",
            "network_interface_ids": [
              "eni-0c05d9086106c1fcd",
              "eni-0da9eb568e10483f2"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0003e87d0df9cc27d"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_security_group.Lohan_ecr_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Lohan_ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-02915306fad2e0097",
            "dns_entry": [
              {
                "dns_name": "vpce-02915306fad2e0097-jx9qxp65.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-02915306fad2e0097-jx9qxp65-ap-northeast-2c.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-02915306fad2e0097-jx9qxp65-ap-northeast-2a.ssm.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssm.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z090522418XJSJ3HRCJ8G"
              }
            ],
            "id": "vpce-02915306fad2e0097",
            "network_interface_ids": [
              "eni-0c17d626100cd3b3c",
              "eni-0cc2fab9701bbf4a4"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0654b11aaf6083961"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_security_group.Lohan_ssm_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "Lohan_ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:151564769076:vpc-endpoint/vpce-032a87b40070f4a2e",
            "dns_entry": [
              {
                "dns_name": "vpce-032a87b40070f4a2e-50n2xont.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-032a87b40070f4a2e-50n2xont-ap-northeast-2a.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-032a87b40070f4a2e-50n2xont-ap-northeast-2c.ssmmessages.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "ssmmessages.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z09378103KTVPEC30XEQV"
              }
            ],
            "id": "vpce-032a87b40070f4a2e",
            "network_interface_ids": [
              "eni-05815b70b3a005ebb",
              "eni-075cf1f43fa4396ef"
            ],
            "owner_id": "151564769076",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0654b11aaf6083961"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0bd7abdd030691f38",
              "subnet-0dafd8e13536bfe3e"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-07c5b287bd53175b7"
          },
          "dependencies": [
            "aws_security_group.Lohan_ssm_sg",
            "aws_subnet.Lohan_private_1",
            "aws_subnet.Lohan_private_2",
            "aws_vpc.Lohan_vpc"
          ]
        }
      ]
    }
  ]
}